refactor: change endpoint
